--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>Backroads || Tour Company</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7a5bc4049a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est reiciendis placeat explicabo, nemo at sint adipisci pariatur dignissimos, ea, veniam inventore praesentium fugiat molestias facilis id? Ea, sint! Doloremque, fugit.</p>
-    <div class="btn">Click me</div>
+    <!-- header section -->
+    <header id="home">
+        <!-- Navigation -->
+        <!-- hero sub-section -->
+        <div class="hero">
+            <div class="hero-banner">
+                <h1>Continue Exporing</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, facilis? Deserunt officiis laborum eveniet minus.</p>
+                <a href="#featured" class="btn hero-btn scrolling-link"> Explore tours</a>
+            </div>
+        </div>
+    </header>
     <script src="js/app.js"></script>
 </body>
 </html>
