--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
             </div>
         </div>
     </header>
+    <!-- About section -->
+    <section class="section" id="about">
+        <!-- Title -->
+        <div class="section-title">
+            <h2>about <span>us</span></h2>
+        </div>
+        <div class="section-center about-center">
+            <!-- About Image container -->
+            <div class="about-img">
+                <img src="./images/about.jpeg" alt="about image">
+            </div>
+            <div class="about-info">
+                <h3>Explore the Difference</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolorum quisquam, autem repellendus accusantium soluta itaque ad qui cupiditate blanditiis nostrum assumenda, delectus, repudiandae atque.</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente labore enim facere nam hic illo fugit non, magni exercitationem numquam nesciunt distinctio nulla unde.</p> 
+                <div class="btn">Read More</div>              
+            </div>
+        </div>
+    </section>
     <script src="js/app.js"></script>
 </body>
 </html>
