--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
         <div class="section-title">
             <h2>about <span>us</span></h2>
         </div>
-        <div class="section-center about-center">
+        <div class="section-center about-center about-row">
             <!-- About Image container -->
-            <div class="about-img">
+            <div class="about-img about-col about-img-col">
                 <img src="./images/about.jpeg" alt="about image">
             </div>
-            <div class="about-info">
+            <div class="about-info about-col about-info-col">
                 <h3>Explore the Difference</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolorum quisquam, autem repellendus accusantium soluta itaque ad qui cupiditate blanditiis nostrum assumenda, delectus, repudiandae atque.</p> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente labore enim facere nam hic illo fugit non, magni exercitationem numquam nesciunt distinctio nulla unde.</p> 
-                <div class="btn">Read More</div>              
+                <a href="#" class="btn">Read More</a>             
             </div>
+        </div>
+    </section>
+
+    <section class="section" id="services">
+        <div class="section-title">
+            <h2>our <span>services</span></h2>
+        </div>
+        <div class="section-center services-center services-row">
+            
         </div>
     </section>
     <script src="js/app.js"></script>
