--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
             <h2>our <span>services</span></h2>
         </div>
         <div class="section-center services-center services-row">
-            
+            <div class="services-1 services-col">
+
+            </div>
+            <div class="services-2 services-col">
+
+            </div>
+            <div class="services-3 services-col">
+
+            </div>
         </div>
     </section>
     <script src="js/app.js"></script>
