--- a/index.html
+++ b/index.html
@@ -46,16 +46,33 @@
         <div class="section-title">
             <h2>our <span>services</span></h2>
         </div>
-        <div class="section-center services-center services-row">
-            <div class="services-1 services-col">
-
-            </div>
-            <div class="services-2 services-col">
-
-            </div>
-            <div class="services-3 services-col">
-
-            </div>
+        <div class="section-center services-center">
+            <article class="service">
+                <div class="service-icon">
+                    <i class="fas fa-wallet"></i>
+                </div>
+                <div class="service-info">
+                    <h4 class="service-title">Saving Money</h4>
+                    <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis!</p>
+                </div>
+            </article>
+            <article class="service">
+                <div class="service-icon">
+                    <i class="fas fa-tree"></i>
+                </div>
+                <div class="service-info">
+                    <h4 class="service-title">Endless Hiking</h4>
+                    <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis!</p>
+            </article>
+            <article class="service">
+                <div class="service-socks">
+                    <i class="fas fa-wallet"></i>
+                </div>
+                <div class="service-info">
+                    <h4 class="service-title">Extreme Comfort</h4>
+                    <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis!</p>
+                </div>
+            </article>
         </div>
     </section>
     <script src="js/app.js"></script>
