Tony-mackbook services section update

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
         <div class="section-center services-center">
             <article class="service">
-                <div class="service-icon">
-                    <i class="fas fa-wallet"></i>
+                <div class=" service-icon">
+                    <i class="fas fa-wallet fa-fw"></i>
                 </div>
                 <div class="service-info">
                     <h4 class="service-title">Saving Money</h4>
@@ -58,15 +58,15 @@
             </article>
             <article class="service">
                 <div class="service-icon">
-                    <i class="fas fa-tree"></i>
+                    <i class="fas fa-tree fa-fw"></i>
                 </div>
                 <div class="service-info">
                     <h4 class="service-title">Endless Hiking</h4>
                     <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis!</p>
             </article>
             <article class="service">
-                <div class="service-socks">
-                    <i class="fas fa-wallet"></i>
+                <div class="service-icon">
+                    <i class="fas fa-socks fa-fw"></i>
                 </div>
                 <div class="service-info">
                     <h4 class="service-title">Extreme Comfort</h4>
