tour section code update

--- a/index.html
+++ b/index.html
@@ -75,6 +75,78 @@
             </article>
         </div>
     </section>
+    <!-- Tour section -->
+    <section class="section" id="featured-tours">
+        <div class="section-title">
+            <h2>Featured <span>Tours</span></h2>
+        </div>
+        <div class="section-center tour-center">
+            <article class="tour-card">
+                <div class="tour-img-container">
+                    <img class="tour-img" src="images/tour-1.jpeg" alt="tour-image">
+                    <p class="tour-date"> August 26th, 2020</p>
+                </div>
+                <div class="tour-info">
+                    <h4>Tibet adventure</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic ad cupiditate quam quas veritatis debitis. Lorem ipsum dolor sit amet.</p>
+                    <div class="tour-footer">
+                        <i class="fas fa-map-signs">Indonesia</i>
+                        <p class="tour-length">6 days</p>
+                        <p class="tour-price">From $2100</p>
+                    </div>  
+                </div>
+            </article>
+            <article class="tour-card">
+                <div class="tour-img-container">
+                    <img class="tour-img" src="images/tour-2.jpeg" alt="tour-image">
+                    <p class="tour-date"> September 15th, 2020</p>
+                </div>
+                <div class="tour-info">
+                    <h4>Best of Java</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic ad cupiditate quam quas veritatis debitis. Lorem ipsum dolor sit amet.</p>
+                    <div class="tour-footer">
+                        <i class="fas fa-map-signs">Hong Kong</i>
+                        <p class="tour-length">6 days</p>
+                        <p class="tour-price">From $2100</p>
+                    </div>  
+                </div>
+            </article>
+            <article class="tour-card">
+                <div class="tour-img-container">
+                    <img class="tour-img" src="images/tour-3.jpeg" alt="tour-image">
+                    <p class="tour-date"> October 1st, 2020</p>
+                </div>
+                <div class="tour-info">
+                    <h4>Explore Hong Kong</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic ad cupiditate quam quas veritatis debitis. Lorem ipsum dolor sit amet.</p>
+                    <div class="tour-footer">
+                        <i class="fas fa-map-signs">China</i>
+                        <p class="tour-length">6 days</p>
+                        <p class="tour-price">From $2100</p>
+                    </div>  
+                </div>
+            </article>
+            <article class="tour-card">
+                <div class="tour-img-container">
+                    <img class="tour-img" src="images/tour-4.jpeg" alt="tour-image">
+                    <p class="tour-date"> December 26th, 2020</p>
+                </div>
+                <div class="tour-info">
+                    <h4>Kenya Highlights</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic ad cupiditate quam quas veritatis debitis. Lorem ipsum dolor sit amet.</p>
+                    <div class="tour-footer">
+                        <i class="fas fa-map-signs">Kenya</i>
+                        <p class="tour-length">6 days</p>
+                        <p class="tour-price">From $2100</p>
+                    </div>  
+                </div>
+            </article>
+        </div>
+        <div class="tour-btn">
+            <a href="#" class="btn">All Tours</a>
+        </div>
+       
+    </section>
     <script src="js/app.js"></script>
 </body>
 </html>
